refactor: Transactions
